Fix style gap

--- a/src/components/dragonElement/DragonElement.module.scss
+++ b/src/components/dragonElement/DragonElement.module.scss
@@ -4,10 +4,10 @@
   display: flex;
   font-family: 'Roboto', sans-serif;
   column-gap: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 
   img {
-    width: 200px;
+    width: 250px;
     height: auto;
   }
 }
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  row-gap: 1.5rem;
+  row-gap: 1rem;
 
   h2 {
     font-size: 2rem;
@@ -30,7 +30,7 @@
   }
 
   p {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 300;
   }
 
